--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ language: objective-c
 osx_image: xcode7.2
 sudo: false
 install:
-  - npm install -g cordova
+  - npm install -g cordova@6.5.0
   - npm install -g cordova-paramedic
 
 script:
