--- a/src/windows/lib/adal3/ADAL3WinMDProxy.csproj
+++ b/src/windows/lib/adal3/ADAL3WinMDProxy.csproj
@@ -91,6 +91,7 @@
     <Compile Include="PromptBehavior.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TokenCache.cs" />
+    <Compile Include="Logger.cs" />
     <Compile Include="TokenCacheItem.cs" />
     <Compile Include="UserIdentifier.cs" />
     <Compile Include="UserIdentifierType.cs" />
